--- a/FE/src/Component/NavBar/style.css
+++ b/FE/src/Component/NavBar/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -12,12 +12,13 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     position: fixed;
-    z-index: 1;
+    z-index: 1000;
     background-color: #fff;
     padding: 1rem 2rem;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .logo h1 {
@@ -26,11 +27,18 @@
     font-family: serif;
 }
 
+.logo img {
+    max-height: 50px;
+    width: auto;
+}
+
 .navItem {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 100px;
+    gap: 2rem;
+    flex: 1;
+    justify-content: flex-end;
 }
 
 .search {
@@ -39,21 +47,23 @@
     flex-direction: row;
     align-items: center;   
     justify-content: center;
+    flex: 1;
+    max-width: 400px;
 }
 
 .search input {
-    width: 400px;
+    width: 100%;
     font-size: 1rem;
     border: 1px solid #5a5a5a;
     border-radius: 25px; 
-    padding: 0.7rem 3rem;
-
+    padding: 0.7rem 3rem 0.7rem 1rem;
 }
 
 .search a {
     position: absolute;
     right: 20px;
-    top: 10px;
+    top: 50%;
+    transform: translateY(-50%);
     cursor: pointer;
 }
 
@@ -62,11 +72,13 @@
     font-size: 1rem;
     color: #5a5a5a;
     font-weight: 500;
+    white-space: nowrap;
 }
-.sign-login p:hover{
-    /* opacity: 0.7; */
+
+.sign-login p:hover {
     text-decoration: underline;
 }
+
 .navIcon {
     display: flex;
     flex-direction: row;
@@ -74,16 +86,19 @@
     gap: 20px;
     font-size: 1.5rem;
 }
+
 .navIcon a {
     cursor: pointer;
     text-decoration: none;
     color: #000000eb;
 }
-.navIcon a i{
+
+.navIcon a i {
     color: #e10a1d;
     font-size: 1.2rem;
 }
-.cart-icon{
+
+.cart-icon {
     padding: 0.1rem 1rem;
     display: flex;
     align-items: center;
@@ -92,32 +107,32 @@
     border-radius: 20px;
     gap: 10px;
     cursor: pointer;
+    white-space: nowrap;
 }
-.cart-icon p{
+
+.cart-icon p {
     color: #5a5a5a;
     font-size: 1rem;
     font-weight: 500;
 }
+
 .navbar2 {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     position: relative;
-    padding-top: 5rem;
-    gap: 200px;
+    padding-top: 6rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.10);
-}
-
-.category p {
-    padding-bottom: 1rem;
 }
 
 .navItem2 {
     display: flex;
     flex-direction: row;
-    gap: 100px;
-    padding: 1rem 2rem 0 2rem;
+    gap: 3rem;
+    padding: 1rem 0;
 }
 
 .category {
@@ -129,21 +144,26 @@
     color: #5a5a5a;
     font-weight: 500;
     position: relative;
+    padding-bottom: 1rem;
+    white-space: nowrap;
 }
 
 .category p:hover {
     color: #e10a1d;
     cursor: pointer;
 }
-.category p:active{
+
+.category p:active {
     color: #e10a1d;
 }
+
 .categoryImg img {
     width: 170px;
 }
 
 .categoryInfo {
     width: 1100px;
+    max-width: calc(100vw - 40px);
     height: 50vh;
     display: flex;
     flex-direction: row;
@@ -152,10 +172,10 @@
     padding: 1rem 2rem;
     position: absolute;
     background-color: #fff;
-    /* margin-top: 1rem; */
     position: fixed;
-    /* top: 140px; */
-    left: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 140px;
     box-shadow: 0px 10px 22px rgba(0, 0, 0, 0.15);
     z-index: 10000;
 }
@@ -174,11 +194,14 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    gap: 80px;
+    gap: 4rem;
+    flex-wrap: wrap;
 }
 
 .categoryList1 p {
     padding-bottom: 1rem;
+    font-weight: 600;
+    color: #333;
 }
 
 .categoryList1 ul li {
@@ -191,18 +214,278 @@
     color: #5a5a5a;
     font-weight: 400;
 }
+
 .categoryList1 ul li a:hover {
     color: #e10a1d;
 }
+
 .helps {
     text-decoration: none;
     display: flex;
     gap: 10px;
+    align-items: center;
 }
 
 .helps a {
     color: #000000eb;
 }
-.helps a, .helps p:hover{
+
+.helps a, .helps p:hover {
     cursor: pointer;
+}
+
+/* Mobile Menu Toggle Button */
+.mobile-menu-toggle {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    padding: 5px;
+}
+
+.mobile-menu-toggle span {
+    width: 25px;
+    height: 3px;
+    background-color: #333;
+    margin: 3px 0;
+    transition: 0.3s;
+}
+
+/* Responsive Styles */
+@media screen and (max-width: 1200px) {
+    .navItem2 {
+        gap: 2rem;
+    }
+    
+    .categoryInfo {
+        width: 900px;
+    }
+    
+    .categoryList {
+        gap: 2rem;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .navbar1 {
+        padding: 1rem;
+    }
+    
+    .navItem {
+        gap: 1rem;
+    }
+    
+    .search {
+        max-width: 250px;
+    }
+    
+    .navItem2 {
+        gap: 1.5rem;
+    }
+    
+    .navbar2 {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+    
+    .categoryInfo {
+        width: 700px;
+        height: 60vh;
+    }
+    
+    .categoryList {
+        gap: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .navbar1 {
+        flex-wrap: wrap;
+        padding: 0.5rem 1rem;
+    }
+    
+    .logo {
+        order: 1;
+    }
+    
+    .navItem {
+        order: 3;
+        width: 100%;
+        justify-content: space-between;
+        margin-top: 1rem;
+    }
+    
+    .search {
+        order: 2;
+        max-width: 200px;
+    }
+    
+    .search input {
+        padding: 0.5rem 2rem 0.5rem 1rem;
+        font-size: 0.9rem;
+    }
+    
+    .sign-login p a {
+        font-size: 0.9rem;
+    }
+    
+    .navbar2 {
+        padding-top: 8rem;
+        flex-direction: column;
+        align-items: stretch;
+        gap: 1rem;
+    }
+    
+    .navItem2 {
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 1rem;
+    }
+    
+    .helps {
+        justify-content: center;
+        padding-bottom: 1rem;
+    }
+    
+    .categoryInfo {
+        width: calc(100vw - 20px);
+        height: 70vh;
+        left: 10px;
+        transform: none;
+        top: 180px;
+        overflow-y: auto;
+    }
+    
+    .categoryList {
+        flex-direction: column;
+        gap: 1rem;
+    }
+    
+    .categoryImg {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .navbar1 {
+        padding: 0.5rem;
+    }
+    
+    .logo img {
+        max-height: 40px;
+    }
+    
+    .navItem {
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+    
+    .search {
+        max-width: 100%;
+        width: 100%;
+    }
+    
+    .search input {
+        padding: 0.5rem 2rem 0.5rem 0.5rem;
+    }
+    
+    .navIcon {
+        gap: 15px;
+        font-size: 1.2rem;
+    }
+    
+    .cart-icon {
+        padding: 0.1rem 0.5rem;
+        gap: 5px;
+    }
+    
+    .cart-icon p {
+        font-size: 0.9rem;
+    }
+    
+    .navbar2 {
+        padding-top: 10rem;
+    }
+    
+    .navItem2 {
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
+    }
+    
+    .category p {
+        padding-bottom: 0.5rem;
+        font-size: 0.9rem;
+    }
+    
+    .categoryInfo {
+        top: 220px;
+        height: 60vh;
+        padding: 1rem;
+    }
+    
+    .categoryList1 {
+        margin-bottom: 1rem;
+    }
+    
+    .helps p {
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .navbar1 {
+        padding: 0.3rem;
+    }
+    
+    .search input {
+        font-size: 0.8rem;
+        padding: 0.4rem 1.5rem 0.4rem 0.5rem;
+    }
+    
+    .search a {
+        right: 10px;
+    }
+    
+    .navIcon a i {
+        font-size: 1rem;
+    }
+    
+    .cart-icon p {
+        font-size: 0.8rem;
+    }
+    
+    .categoryInfo {
+        padding: 0.5rem;
+        top: 200px;
+    }
+    
+    .categoryList1 p {
+        font-size: 0.9rem;
+        padding-bottom: 0.5rem;
+    }
+    
+    .categoryList1 ul li a {
+        font-size: 0.8rem;
+    }
+}
+
+/* Landscape orientation on mobile */
+@media screen and (max-width: 768px) and (orientation: landscape) {
+    .navbar2 {
+        padding-top: 6rem;
+    }
+    
+    .categoryInfo {
+        top: 140px;
+        height: 80vh;
+    }
+}
+
+/* Hide dropdown menus on mobile by default - you might want to implement a mobile-specific menu */
+@media screen and (max-width: 768px) {
+    .categoryInfo {
+        display: none;
+    }
+    
+    /* You can add a mobile menu implementation here */
 }
